--- a/be/package.json
+++ b/be/package.json
@@ -18,6 +18,7 @@
     "abi-decoder": "^2.4.0",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^3.0.2",
     "bignumber.js": "^9.0.1",
     "body-parser": "^1.19.0",
     "colors": "^1.3.3",
@@ -34,14 +35,16 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^8.15.1",
     "mysql2": "^3.15.1",
+    "nodemailer": "^7.0.9",
     "password-validator": "^5.1.1",
     "sequelize": "^6.37.7",
+    "slugify": "^1.6.6",
     "tracer": "^0.9.8",
     "tslint": "^6.1.3",
     "uuid": "^8.3.2"
   },
   "scripts": {
-    "start": "node --require ts-node/register src/main.ts",
+    "start": "npm run dev",
     "dev": "nodemon --watch src/**/*.ts --ignore src/**/*.spec.ts --exec ts-node src/main.ts",
     "test": "echo \\\"Error: no src/test specified\\\" && exit 1",
     "build": "tsc",
@@ -51,6 +54,8 @@
   "author": "HieuTV",
   "license": "ISC",
   "devDependencies": {
+    "@types/nodemailer": "^7.0.2",
+    "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
