--- a/be/package.json
+++ b/be/package.json
@@ -34,6 +34,7 @@
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^8.15.1",
+    "morgan": "^1.10.1",
     "mysql2": "^3.15.1",
     "nodemailer": "^7.0.9",
     "password-validator": "^5.1.1",
@@ -54,6 +55,7 @@
   "author": "HieuTV",
   "license": "ISC",
   "devDependencies": {
+    "@types/morgan": "^1.9.10",
     "@types/nodemailer": "^7.0.2",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
