--- a/be/package.json
+++ b/be/package.json
@@ -34,8 +34,8 @@
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^8.15.1",
+    "mongoose-delete": "^1.0.2",
     "morgan": "^1.10.1",
-    "mysql2": "^3.15.1",
     "nodemailer": "^7.0.9",
     "password-validator": "^5.1.1",
     "sequelize": "^6.37.7",
@@ -55,6 +55,7 @@
   "author": "HieuTV",
   "license": "ISC",
   "devDependencies": {
+    "@types/mongoose-delete": "^1.0.6",
     "@types/morgan": "^1.9.10",
     "@types/nodemailer": "^7.0.2",
     "nodemon": "^3.1.10",
