--- a/fe/package.json
+++ b/fe/package.json
@@ -16,7 +16,11 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "@mui/material": "^5.15.15", 
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
