--- a/be/package.json
+++ b/be/package.json
@@ -29,14 +29,18 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-rate-limit": "^7.5.0",
+    "express-session": "^1.18.2",
     "geoip-lite": "^1.4.10",
     "helmet": "^4.1.1",
+    "http": "^0.0.1-security",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^8.15.1",
     "mongoose-delete": "^1.0.2",
     "morgan": "^1.10.1",
     "nodemailer": "^7.0.9",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "password-validator": "^5.1.1",
     "sequelize": "^6.37.7",
     "slugify": "^1.6.6",
@@ -55,9 +59,11 @@
   "author": "HieuTV",
   "license": "ISC",
   "devDependencies": {
+    "@types/express-session": "^1.18.2",
     "@types/mongoose-delete": "^1.0.6",
     "@types/morgan": "^1.9.10",
     "@types/nodemailer": "^7.0.2",
+    "@types/passport-google-oauth20": "^2.0.16",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
