--- a/be/tsconfig.json
+++ b/be/tsconfig.json
@@ -6,9 +6,7 @@
     "outDir": "build",
     "strict": true,
     "allowJs": true,
-    "typeRoots": [
-      "node_modules/@types"
-    ],
+    "typeRoots": ["./src/types", "./node_modules/@types"],
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "skipLibCheck": true
