--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "axios": "^1.12.2"
+    "axios": "^1.12.2",
+    "lucide-react": "^0.546.0"
   },
   "devDependencies": {
     "@types/axios": "^0.9.36"
