--- a/be/package.json
+++ b/be/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@aws-sdk/client-mediaconvert": "^3.914.0",
+    "@aws-sdk/client-s3": "^3.914.0",
+    "@aws-sdk/s3-request-presigner": "^3.914.0",
     "@payos/node": "^2.0.3",
     "@sendgrid/mail": "^7.6.0",
     "@types/bcrypt": "^3.0.0",
