--- a/be/package.json
+++ b/be/package.json
@@ -25,6 +25,7 @@
     "bcryptjs": "^3.0.2",
     "bignumber.js": "^9.0.1",
     "body-parser": "^1.19.0",
+    "cloudinary": "^2.8.0",
     "colors": "^1.3.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
