--- a/be/package.json
+++ b/be/package.json
@@ -51,7 +51,8 @@
     "slugify": "^1.6.6",
     "tracer": "^0.9.8",
     "tslint": "^6.1.3",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "@google/genai": "^0.2.0"
   },
   "scripts": {
     "start": "npm run dev",
