--- a/be/package.json
+++ b/be/package.json
@@ -7,6 +7,7 @@
     "@aws-sdk/client-mediaconvert": "^3.914.0",
     "@aws-sdk/client-s3": "^3.914.0",
     "@aws-sdk/s3-request-presigner": "^3.914.0",
+    "@google/genai": "^0.2.0",
     "@payos/node": "^2.0.3",
     "@sendgrid/mail": "^7.6.0",
     "@supabase/supabase-js": "^2.76.1",
@@ -43,6 +44,7 @@
     "mongoose": "^8.15.1",
     "mongoose-delete": "^1.0.2",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.9",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
@@ -51,8 +53,7 @@
     "slugify": "^1.6.6",
     "tracer": "^0.9.8",
     "tslint": "^6.1.3",
-    "uuid": "^8.3.2",
-    "@google/genai": "^0.2.0"
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "npm run dev",
@@ -69,6 +70,7 @@
     "@types/express-session": "^1.18.2",
     "@types/mongoose-delete": "^1.0.6",
     "@types/morgan": "^1.9.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.9.1",
     "@types/nodemailer": "^7.0.2",
     "@types/passport": "^1.0.17",
