--- a/fe/package.json
+++ b/fe/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.18",
     "lucide-react": "^0.546.0",
+    "multer": "^2.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
