--- a/fe/package.json
+++ b/fe/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
     "recharts": "^3.4.1",
+    "slugify": "^1.6.6",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
